--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,16 +4,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="../public/src/css/style.css">
+		<meta
+		name="viewport" content="width=device-width, initial-scale=1.0">
+		{# <link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css"> #}
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+		<link rel="stylesheet" href="/src/css/style.css">
+
+
 		<title>
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
 
 	</head>
-	<body>
-		{% block body %}{% endblock %}
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+	<body class="container-xxl"> {% block body %}{% endblock %}
+		{% block javascripts %}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+		{% endblock %}
+
 	</body>
 </html>
