Attempt to validate the form with requests only
- Failed
- Protocol :
- 1 - deletion of an existing image and addition of two cards, one of which does not have the download field filled in and validation
- 2 - completion of the missing field and validation
- Result : there is again a missing image to upload while all is complete in the form.

--- a/templates/contribution/_form.html.twig
+++ b/templates/contribution/_form.html.twig
@@ -1,58 +1,132 @@
-{{ form_start(formView) }}
+{% import _self as macros %}
+{% macro printImageRow(imageForm) %}
+	<div class="modal fade" id="img___name___Modal" tabindex="-1" aria-labelledby="imgModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="imgModalLabel">Ajout d'une image</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					{{ form_errors(imageForm) }}
+					{{ form_row(imageForm.title, {'value': 'valueTitle'})}}
+					{{ form_row(imageForm.path)}}
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endmacro %}
 
-{{ form_errors(formView) }}
+{% macro printImageAvailable(imageForm, index) %}
+	<div class="card d-inline-block m-1" data-id="{{index}}">
+		<pre>
+		{{ dump(imageForm ?: '') }}
+	</pre>
+		<div class="card-img-top" style="background: url(' {{imageForm.imageTarget.vars.data is null ? '/src/img/no_image.png' : '/img_uploads/'~ imageForm.vars.data.path}} ') no-repeat center 40%; background-size: cover; height: 30vh; border-radius: 10px 10px 0 0"></div>
+		{# <div class="card-img-top" style="background: url(' {{('/img_uploads/'~ imageForm.vars.data.path)|default('/src/img/no_image.png')}} ') no-repeat center 40%; background-size: cover; height: 30vh; border-radius: 10px 10px 0 0"></div> #}
+		<div class="card-body text-end">
+			<button type="button" class="btn btn-primary bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#img_{{index}}_Modal"></button>
+			<button type="button" class="btn btn-danger bi bi-trash-fill ms-4" data-remove="{{index}}"></button>
+		</div>
+	</div>
 
-<div class="row">
-	<div class="col">
-		{% if trick %}
-			<h2>
-				{{ trick.title }}
-			</h2>
-
-			{% for image in trick.images %}
-				{# Show only validated images of the trick #}
-				{% if image.trick %}
-					<div class="card d-inline-block">
-						<img src="{{ asset('/img_uploads/'~ image.path)}}" alt="{{ image.title }}" width="150" height="150">
-						<div class="card-body">
-							<h5 class="card-title">{{ image.title }}
-							</h5>
+	<div class="modal fade" id="img_{{index}}_Modal" tabindex="-1" aria-labelledby="imgModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="imgModalLabel">Ajout d'une image</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div
+					class="modal-body">
+					{# {{ form_errors(imageForm) }} #}
+					{{ form_row(imageForm.title, {'value': imageForm.vars.data.title|default})}}
+					{% if imageForm.vars.data.path is null %}
+						{{ form_row(imageForm.path, {'value': imageForm.vars.data.path})}}
+					{% else %}
+						<div>
+							<span class="badge bg-success">
+								<i class="bi bi-file-image"></i>
+								{{ imageForm.vars.data.path }}
+							</span>
+							<p></p>
 						</div>
+						{% if imageForm.path is defined %}
+							{{ form_row(imageForm.path, {'row_attr':{'class': 'form_path'}})}}
+						{% endif %}
+					{% endif %}
+
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endmacro %}
+
+<div class="card">
+
+	{{ form_start(formView) }}
+
+	{{ form_errors(formView) }}
+
+	<div class="row">
+		<div class="col">
+			{% if not trick or not trick.imageInFront.first %}
+				<div class="d-flex justify-content-center align-items-center" style="background: url('/src/img/no_image.png') no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
+				{% else %}
+					<div class="d-flex justify-content-center align-items-center" style="background: url({{ asset('/img_uploads/'~ trick.imageInFront.first.path)}}) no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
+					{% endif %}
+
+					<div class="w-100 px-lg-5 px-1">
+						{% if trick %}
+							<h2 class="card-trick_title text-center">
+								{{ trick.title }}
+							</h2>
+						{% else %}
+							{{ form_row(formView.title) }}
+						{% endif %}
 					</div>
-
-					{# <a href="{{path('delete_image', {id:image.id})}}" data-delete data-token="{{csrf_token('delete' ~ image.id)}}">Supprimer</a> #}
-				{% endif %}
-			{% endfor %}
-
-		{% else %}
-			{{ form_row(formView.title) }}
-		{% endif %}
-		{{ form_row(formView.lead_in) }}
-		{{ form_row(formView.content)}}
-		{% if not trick %}
-			{{ form_row(formView.category)}}
-		{% endif %}
-
-		<button class="btn btn-success bi bi-plus-lg" data-add data-collection-holder-class="images">
-			Ajouter une image</button>
-
-		<div class="images" data-index="{{ formView.images|length > 0 ? formView.images|last.vars.name + 1 : 0 }}" data-prototype="{{form_widget(formView.images.vars.prototype)|e('html_attr')}}">
-			{% for image in formView.images %}
-				<div class="card m-2 px-2 py-3">
-					{{ form_row(image.title)}}
-					{{ form_row(image.description)}}
-					{{ form_row(image.path)}}
 				</div>
 
-			{% endfor %}
+				<div class="images_section py-2">
+
+					<button type="button" class="btn btn-success bi bi-plus-lg text-uppercase" data-add-card data-collection-holder-class="images-list">
+						Ajouter une image</button>
+
+					<div id="images" class="images-list" data-index="{{formView.images|length - 1}}" data-images-contribution="{{ contribution.images|serialize('json', {groups: 'trick:read'}) }}" data-images-trick="{{ trick.images|serialize('json', {groups: 'trick:read'}) }}" data-submitted="{{(formView.vars.valid ? null : formView.vars.data.images) |serialize('json', {groups: 'trick:read'})}}" data-prototype="{{macros.printImageRow(formView.images.vars.prototype)|e('html_attr')}}">
+
+						{% set index = 0 %}
+
+						{% for imageForm in formView.images %}
+							{{ macros.printImageAvailable(imageForm,index) }}
+							{% set index = index + 1 %}
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+			{{ form_row(formView.lead_in) }}
+			{{ form_row(formView.content)}}
+
+			{% if not trick %}
+				{{ form_row(formView.category)}}
+			{% endif %}
 		</div>
 
-	</div>
-</div>
+		<button type="submit" class="submit btn btn-primary text-uppercase">
+			<i class="fas fa-save"></i>
+			Soumettre !
+		</button>
 
-<button class="submit btn btn-primary">
-	<i class="fas fa-save"></i>
-	Soumettre !
-</button>
-{{ form_end(formView) }}</div>{% block script %}
-<script src="{{ asset('src/js/image.js') }}"></script>{% endblock %}
+		{# {{ form_end(formView, {'render_rest': false}) }} #}
+		{{ form_end(formView) }}
+	</div>
+
+	{% block script %}
+		<script src="{{ asset('src/js/image.js') }}"></script>
+	{% endblock %}
+</div>
