--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,10 +17,16 @@
 		</title>
 
 	</head>
-	<body class="container-xxl"> {% block body %}{% endblock %}
-		{% block javascripts %}
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
-		{% endblock %}
-
-	</body>
-</html>
+	<body class="bg-light">
+		<header>
+			{% include "shared/_navbar.html.twig" %}
+		</header>
+		<main>
+			<div class="container-xxl"> {% block body %}{% endblock %}
+				</div>
+			</main>
+			{% block javascripts %}
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+			{% endblock %}
+		</body>
+	</html>
