--- a/templates/contribution/edit_trick.html.twig
+++ b/templates/contribution/edit_trick.html.twig
@@ -6,15 +6,14 @@
 
 {% block body %}
 
-	<div class="container-xxl">
-		<h1>Contribuer -
-			{% if trick %}
-				Editer le Trick :
-			{% else %}
-				Créer un Trick :
-			{% endif %}
-		</h1>
+	<h1 class="h5 text-center my-4">Contribuer -
+		{% if trick %}
+			Editer le Trick
+		{% else %}
+			Créer un Trick
+		{% endif %}
+	</h1>
 
-		{% include "contribution/_form.html.twig" %}
+	{% include "contribution/_form.html.twig" %}
 
-	{% endblock %}
+{% endblock %}
