--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -12293,6 +12293,26 @@ footer {
   border-radius: 10px 10px 0 0;
 }
 
+.card-img-invalid {
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e") no-repeat right 0/15%, url(/src/img/no_image.png) no-repeat center 40%/cover;
+  height: 30vh;
+  border-radius: 10px 10px 0 0;
+}
+
+/* FORM TRICK */
+#form_error > .alert {
+  max-width: 98%;
+  margin: 10px auto;
+  z-index: auto;
+}
+
+.maxlength {
+  position: relative;
+  top: -6px;
+  left: calc(50% - 40px);
+  width: 80px;
+}
+
 /* NAVBAR */
 .navbar-collapse {
   z-index: 1;
