--- a/templates/contribution/_form.html.twig
+++ b/templates/contribution/_form.html.twig
@@ -9,8 +9,8 @@
 				</div>
 				<div class="modal-body">
 					{{ form_errors(imageForm) }}
-					{{ form_row(imageForm.title, {'value': 'valueTitle'})}}
-					{{ form_row(imageForm.path)}}
+					{{ form_row(imageForm.title, {'value': 'valueTitle', 'attr': {'data-id': '__name__', 'data-field':'image'}})}}
+					{{ form_row(imageForm.file_name, {'attr': {'data-id': '__name__', 'data-field':'image'}})}}
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
@@ -22,11 +22,7 @@
 
 {% macro printImageAvailable(imageForm, index) %}
 	<div class="card d-inline-block m-1" data-id="{{index}}">
-		<pre>
-		{{ dump(imageForm ?: '') }}
-	</pre>
-		<div class="card-img-top" style="background: url(' {{imageForm.imageTarget.vars.data is null ? '/src/img/no_image.png' : '/img_uploads/'~ imageForm.vars.data.path}} ') no-repeat center 40%; background-size: cover; height: 30vh; border-radius: 10px 10px 0 0"></div>
-		{# <div class="card-img-top" style="background: url(' {{('/img_uploads/'~ imageForm.vars.data.path)|default('/src/img/no_image.png')}} ') no-repeat center 40%; background-size: cover; height: 30vh; border-radius: 10px 10px 0 0"></div> #}
+		<div class="card-img-top" style="background: url(' {{imageForm.imageTarget.vars.data is null ? '/src/img/no_image.png' : '/img_uploads/'~ imageForm.vars.data.fileName}} ') no-repeat center 40%/cover; height: 30vh; border-radius: 10px 10px 0 0"></div>
 		<div class="card-body text-end">
 			<button type="button" class="btn btn-primary bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#img_{{index}}_Modal"></button>
 			<button type="button" class="btn btn-danger bi bi-trash-fill ms-4" data-remove="{{index}}"></button>
@@ -40,23 +36,23 @@
 					<h5 class="modal-title" id="imgModalLabel">Ajout d'une image</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
-				<div
-					class="modal-body">
-					{# {{ form_errors(imageForm) }} #}
-					{{ form_row(imageForm.title, {'value': imageForm.vars.data.title|default})}}
-					{% if imageForm.vars.data.path is null %}
-						{{ form_row(imageForm.path, {'value': imageForm.vars.data.path})}}
-					{% else %}
+				<div class="modal-body">
+					{{ form_errors(imageForm) }}
+					{{ form_row(imageForm.title, {'value': imageForm.vars.data.title|default, 'attr': {'data-id': index, 'data-field':'image'}})}}
+
+					{% if imageForm.imageTarget.vars.value %}
 						<div>
 							<span class="badge bg-success">
 								<i class="bi bi-file-image"></i>
-								{{ imageForm.vars.data.path }}
+								{{ imageForm.vars.data.fileName|preg_replace('/-\\w+(?=\\.\\w+$)/', '') }}
 							</span>
 							<p></p>
 						</div>
-						{% if imageForm.path is defined %}
-							{{ form_row(imageForm.path, {'row_attr':{'class': 'form_path'}})}}
+						{% if imageForm.file_name is defined %}
+							{{ form_row(imageForm.file_name, {'row_attr':{'class': 'form_path'}})}}
 						{% endif %}
+					{% else %}
+						{{ form_row(imageForm.file_name, {'value': imageForm.vars.data.fileName, 'attr': {'data-id': index, 'data-field':'image'}})}}
 					{% endif %}
 
 				</div>
@@ -79,7 +75,7 @@
 			{% if not trick or not trick.imageInFront.first %}
 				<div class="d-flex justify-content-center align-items-center" style="background: url('/src/img/no_image.png') no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
 				{% else %}
-					<div class="d-flex justify-content-center align-items-center" style="background: url({{ asset('/img_uploads/'~ trick.imageInFront.first.path)}}) no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
+					<div class="d-flex justify-content-center align-items-center" style="background: url({{ asset('/img_uploads/'~ trick.imageInFront.first.file_name)}}) no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
 					{% endif %}
 
 					<div class="w-100 px-lg-5 px-1">
@@ -88,7 +84,8 @@
 								{{ trick.title }}
 							</h2>
 						{% else %}
-							{{ form_row(formView.title) }}
+							{{ form_row(formView.title, {'attr': {'data-field':'trick'}}) }}
+
 						{% endif %}
 					</div>
 				</div>
@@ -98,7 +95,7 @@
 					<button type="button" class="btn btn-success bi bi-plus-lg text-uppercase" data-add-card data-collection-holder-class="images-list">
 						Ajouter une image</button>
 
-					<div id="images" class="images-list" data-index="{{formView.images|length - 1}}" data-images-contribution="{{ contribution.images|serialize('json', {groups: 'trick:read'}) }}" data-images-trick="{{ trick.images|serialize('json', {groups: 'trick:read'}) }}" data-submitted="{{(formView.vars.valid ? null : formView.vars.data.images) |serialize('json', {groups: 'trick:read'})}}" data-prototype="{{macros.printImageRow(formView.images.vars.prototype)|e('html_attr')}}">
+					<div id="images" class="images-list" data-index="{{formView.images|length - 1}}" data-images-contribution="{{ contribution.images|serialize('json', {groups: 'trick:read'}) }}" data-prototype="{{macros.printImageRow(formView.images.vars.prototype)|e('html_attr')}}">
 
 						{% set index = 0 %}
 
@@ -109,12 +106,25 @@
 					</div>
 				</div>
 			</div>
-			{{ form_row(formView.lead_in) }}
-			{{ form_row(formView.content)}}
-
+			{{ form_row(formView.lead_in, {'attr': {'data-field':'trick'}}) }}
+			{{ form_row(formView.content, {'attr': {'data-field':'trick'}})}}
 			{% if not trick %}
-				{{ form_row(formView.category)}}
+				{{ form_row(formView.category, {'attr': {'data-field':'trick'}})}}
 			{% endif %}
+		</div>
+
+		<div id="form_error">
+			{% if formView.vars.valid is same as(false) %}
+
+				<div class="alert alert-danger d-flex align-items-center" id='error_message'>
+					<i class="bi bi-exclamation-triangle-fill"></i>
+					<div>&nbsp;<strong>Mince alors !</strong>
+						<span class="alert-link">Changez quelques trucs</span>
+						et essayez de soumettre à nouveau.</div>
+				</div>
+
+			{% endif %}
+
 		</div>
 
 		<button type="submit" class="submit btn btn-primary text-uppercase">
@@ -127,6 +137,6 @@
 	</div>
 
 	{% block script %}
-		<script src="{{ asset('src/js/image.js') }}"></script>
+		<script src="{{ asset('src/js/contributionForm.js') }}"></script>
 	{% endblock %}
 </div>
