--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -12272,8 +12272,10 @@ footer {
   visibility: hidden;
 }
 
-/* IMAGES LIST */
-.images-list {
+/* IMAGES-VIDEO LIST */
+.images-list,
+.videos-list,
+.media-list {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (minmax(auto, 300px))[auto-fit];
@@ -12289,12 +12291,18 @@ footer {
 }
 
 .card-img-top {
-  height: 16vh;
+  height: 30vh;
   border-radius: 10px 10px 0 0;
 }
 
 .card-img-invalid {
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e") no-repeat right 0/15%, url(/src/img/no_image.png) no-repeat center 40%/cover;
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e") no-repeat right 0/15%, url(/src/img/no_image.svg) no-repeat center/50% #f8fafb;
+  height: 30vh;
+  border-radius: 10px 10px 0 0;
+}
+
+.card-video-invalid {
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e") no-repeat right 0/15%, url(/src/img/no_video.svg) no-repeat center/50% #f8fafb;
   height: 30vh;
   border-radius: 10px 10px 0 0;
 }
