--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -12283,6 +12283,19 @@ footer {
 }
 
 /* CARD TRICK */
+.card-trick_in-front {
+  position: absolute;
+  right: -6px;
+  top: 25px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 48px;
+      grid-template-columns: 48px;
+  grid-gap: 5px;
+  -ms-grid-rows: 40px 40px;
+      grid-template-rows: 40px 40px;
+}
+
 .card-trick_title {
   width: 98%;
   background: rgba(255, 255, 255, 0.5);
@@ -12296,7 +12309,7 @@ footer {
 }
 
 .card-img-invalid {
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e") no-repeat right 0/15%, url(/src/img/no_image.svg) no-repeat center/50% #f8fafb;
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e") no-repeat right 0/15%, url(/src/img/no_img.svg) no-repeat center/50% #f8fafb;
   height: 30vh;
   border-radius: 10px 10px 0 0;
 }
