--- a/templates/contribution/_form.html.twig
+++ b/templates/contribution/_form.html.twig
@@ -23,7 +23,7 @@
 {% macro printImageAvailable(imageForm, index) %}
 	<div class="card d-inline-block m-1 {{imageForm.vars.valid is same as(false) ? 'border border-1 border-danger' : ''}}" data-type="img" data-id="{{index}}">
 		{% if imageForm.imageTarget.vars.data is null %}
-			<div class="card-img-top" style="background: {{imageForm.vars.valid is same as(false) ? " url(&quot;data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e&quot;) no-repeat right 0/15%, " : ''}} url('/src/img/no_image.svg') no-repeat center/50% #f8fafb; height: 30vh; border-radius: 10px 10px 0 0"></div>
+			<div class="card-img-top" style="background: {{imageForm.vars.valid is same as(false) ? " url(&quot;data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e&quot;) no-repeat right 0/15%, " : ''}} url('/src/img/no_img.svg') no-repeat center/50% #f8fafb; height: 30vh; border-radius: 10px 10px 0 0"></div>
 		{% else %}
 			<div class="card-img-top" style="background: {{imageForm.vars.valid is same as(false) ? " url(&quot;data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e&quot;) no-repeat right 0/15%, " : ''}} url(' {{'/img_uploads/'~ imageForm.vars.data.filename}} ') no-repeat center 40%/cover; height: 30vh; border-radius: 10px 10px 0 0"></div>
 		{% endif %}
@@ -138,7 +138,7 @@
 
 {# ------------------------------------------------------------------------------------------ #}
 
-<div class="card">
+<div class="card" data-new-trick={{trick ? '' : 1}}>
 
 	{{ form_start(formView) }}
 
@@ -146,10 +146,31 @@
 
 	<div class="row">
 		<div class="col">
-			{% if not trick or not trick.imageInFront.first %}
-				<div class="d-flex justify-content-center align-items-center" style="background: url('/src/img/no_image.png') no-repeat center/cover; height: 40vh; border-radius: 10px 10px 0 0">
+			<div class="card-trick_in-front">
+				<button type="button" class="btn btn-primary bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#img_in_front_Modal"></button>
+				{# ---------- Modal ------------ #}
+				<div class="modal fade" id="img_in_front_Modal" tabindex="-1" aria-labelledby="image in front - modal" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="videoModalLabel">Image mise en avant</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body">
+								{{ form_row(formView.image_in_front, {'attr': {'data-type':'trick'}})}}
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			{# ---------- Modal ------------ #}
+			{% if not trick or not trick.imageInFront %}
+				<div class="d-flex justify-content-center align-items-center" style="background: url('/src/img/no_img.svg') no-repeat center/50%; height: 40vh; border-radius: 10px 10px 0 0">
 				{% else %}
-					<div class="d-flex justify-content-center align-items-center" style="background: url({{ asset('/img_uploads/'~ trick.imageInFront.first.fileName)}}) no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
+					<div class="d-flex justify-content-center align-items-center" style="background: url({{ asset('/img_uploads/'~ trick.imageInFront.fileName)}}) no-repeat center; background-size: cover; height: 40vh; border-radius: 10px 10px 0 0">
 					{% endif %}
 
 					<div class="w-100 px-lg-5 px-1">
