Added a Trick display page with comment functionality.
-Added "LoadMore" functionality for pagination comments

--- a/public/src/css/style.css
+++ b/public/src/css/style.css
@@ -12197,17 +12197,20 @@ thead th {
 }
 
 .card {
-  border-radius: 10px;
+  border-radius: 10px 10px 0 10px;
   height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
+}
+
+.card-body {
+  padding: 2px 2px;
 }
 
 .alert {
   max-width: 600px;
   width: 100%;
   margin: 10px 0;
-  z-index: -1;
 }
 
 /* PAGINATION */
@@ -12225,15 +12228,30 @@ thead th {
 }
 
 /* BASE */
+@font-face {
+  font-family: "reisregular";
+  src: url("/fonts/reis-regular-webfont.woff2") format("woff2"), url("/fonts/reis-regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: auto minmax(auto, 100vw) auto;
       grid-template-columns: auto minmax(auto, 100vw) auto;
-  -ms-grid-rows: 56px minmax(89vh, auto);
-      grid-template-rows: 56px minmax(89vh, auto);
+  -ms-grid-rows: 68px minmax(89vh, auto);
+      grid-template-rows: 68px minmax(89vh, auto);
   font-family: "Manrope", sans-serif;
   overflow-x: hidden;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4,
+.h1,
+.h2,
+.h3,
+.h4 {
+  font-family: "reisregular";
 }
 
 @media (min-width: 768px) {
@@ -12278,11 +12296,20 @@ footer {
 .media-list {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(auto, 300px))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(auto, 300px));
+  -ms-grid-columns: (minmax(auto, 100%))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(auto, 100%));
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media (min-width: 576px) {
+  .images-list,
+  .videos-list,
+  .media-list {
+    -ms-grid-columns: (minmax(auto, 300px))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(auto, 300px));
+  }
 }
 
 /* CARD TRICK */
@@ -12299,16 +12326,34 @@ footer {
       grid-template-rows: 40px 40px;
 }
 
+.card-title {
+  width: 95%;
+}
+
 .card-trick_title {
-  width: 98%;
+  width: 95%;
   background: rgba(255, 255, 255, 0.5);
   padding: 2rem;
   border-radius: 10px;
+  font-size: 4rem;
+  -webkit-transform: rotate(-2deg);
+          transform: rotate(-2deg);
+}
+
+@media (min-width: 768px) {
+  .card-trick_title {
+    font-size: 6rem;
+  }
+}
+
+#medias .card {
+  -webkit-transform: rotate(2deg);
+          transform: rotate(2deg);
 }
 
 .card-img-top {
   height: 30vh;
-  border-radius: 10px 10px 0 0;
+  border-radius: 10px 10px 0 10px;
 }
 
 .card-medias_btn {
@@ -12344,6 +12389,66 @@ footer {
   }
 }
 
+.card-description {
+  border: 5px dotted gray;
+  margin: auto;
+  border-radius: 10px;
+  padding: 1rem 0.4rem;
+  width: 93%;
+}
+
+@media (min-width: 768px) {
+  .card-description {
+    padding: 1rem;
+    width: 96%;
+  }
+}
+
+.card-lead {
+  -webkit-transform: rotate(-2deg);
+          transform: rotate(-2deg);
+}
+
+.card-comments {
+  border: 2px dotted #f4bd61;
+  width: 90%;
+  margin-bottom: 4rem;
+}
+
+.card-comment {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 60px 1fr;
+      grid-template-columns: 60px 1fr;
+  -webkit-column-gap: 15px;
+          column-gap: 15px;
+}
+
+@media (min-width: 768px) {
+  .card-comment {
+    -ms-grid-columns: 80px 1fr;
+        grid-template-columns: 80px 1fr;
+  }
+}
+
+.card-avatar {
+  width: 60px;
+  -webkit-transform: rotate(-8deg);
+          transform: rotate(-8deg);
+}
+
+@media (min-width: 768px) {
+  .card-avatar {
+    width: 80px;
+  }
+}
+
+.card-loadmore {
+  width: 215px;
+  margin: auto;
+  display: block;
+}
+
 /* FORM TRICK */
 #form_error > .alert {
   max-width: 98%;
@@ -12367,7 +12472,7 @@ fieldset {
   z-index: 1;
   width: 100%;
   position: absolute;
-  top: 60px;
+  top: 52px;
   left: 0;
 }
 
@@ -12375,6 +12480,24 @@ fieldset {
   .navbar-collapse {
     position: inherit;
   }
+}
+
+.navbar-brand {
+  font-size: 2rem;
+  -webkit-transform: rotate(-7deg);
+          transform: rotate(-7deg);
+}
+
+/* VIEW TRICK */
+.trick-post_comment {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 /* HERO */
