--- a/templates/contribution/edit_trick.html.twig
+++ b/templates/contribution/edit_trick.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-	<h1 class="h5 text-center my-4">Contribuer -
+	<h1 class="h5 text-center py-2 my-1">Contribuer -
 		{% if trick %}
 			Editer le Trick
 		{% else %}
