--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,11 +22,13 @@
 			{% include "shared/_navbar.html.twig" %}
 		</header>
 		<main>
-			<div class="container-xxl"> {% block body %}{% endblock %}
-				</div>
-			</main>
-			{% block javascripts %}
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
-			{% endblock %}
-		</body>
-	</html>
+			<div class="container-xxl">
+				{% include "shared/_alert.html.twig" %}
+				{% block body %}{% endblock %}
+			</div>
+		</main>
+		{% block javascripts %}
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+		{% endblock %}
+	</body>
+</html>
