--- a/templates/contribution/_form.html.twig
+++ b/templates/contribution/_form.html.twig
@@ -21,7 +21,7 @@
 {% endmacro %}
 
 {% macro printImageAvailable(imageForm, index) %}
-	<div class="card d-inline-block m-1 {{imageForm.vars.valid is same as(false) ? 'border border-1 border-danger' : ''}}" data-type="img" data-id="{{index}}">
+	<div class="card m-1{{imageForm.vars.valid is same as(false) ? ' border border-1 border-danger' : ''}}" data-type="img" data-id="{{index}}">
 		{% if imageForm.imageTarget.vars.data is null %}
 			<div class="card-img-top" style="background: {{imageForm.vars.valid is same as(false) ? " url(&quot;data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e&quot;) no-repeat right 0/15%, " : ''}} url('/src/img/no_img.svg') no-repeat center/50% #f8fafb; height: 30vh; border-radius: 10px 10px 0 0">
 			{% else %}
@@ -90,7 +90,7 @@
 	{% endmacro %}
 
 	{% macro printVideoAvailable(videoForm, index) %}
-		<div class="card d-inline-block m-1{{videoForm.vars.valid is same as(false) ? 'border border-1 border-danger' : ''}}" data-type="video" data-id="{{index}}">
+		<div class="card m-1{{videoForm.vars.valid is same as(false) ? ' border border-1 border-danger' : ''}}" data-type="video" data-id="{{index}}">
 			{% if videoForm.videoTarget.vars.data is null %}
 				<div class="card-img-top" style="background: {{videoForm.vars.valid is same as(false) ? " url(&quot;data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e&quot;) no-repeat right 0/15%, " : ''}} url('/src/img/no_video.svg') no-repeat center/50% #f8fafb; height: 30vh; border-radius: 10px 10px 0 0"></div>
 			{% else %}
@@ -184,6 +184,7 @@
 						</div>
 					</div>
 
+					<h2 class="text-center fs-1">- Medias -</h2>
 					<div class="d-flex justify-content-center m-1">
 						<button id="btn-viewMedias" class="btn btn-primary bi bi-collection text-uppercase m-1" type="button" data-bs-toggle="collapse" data-bs-target="#collapseMediasCards" aria-expanded="true" aria-controls="collapseMediasCards">
 							Afficher/Cacher les médias
@@ -219,11 +220,12 @@
 							</button>
 						</div>
 					</div>
-
-
 				</div>
-				{{ form_row(formView.lead_in, {'attr': {'data-type':'trick'},'row_attr':{'class': 'mb-3 px-4'}}) }}
-				{{ form_row(formView.content, {'attr': {'data-type':'trick'},'row_attr':{'class': 'mb-3 px-4'}})}}
+				<h2 class="text-center fs-1">- Description -</h2>
+				<div class="card-description">
+					{{ form_row(formView.lead_in, {'attr': {'data-type':'trick'},'row_attr':{'class': 'mb-3 px-lg-4'}}) }}
+					{{ form_row(formView.content, {'attr': {'data-type':'trick'},'row_attr':{'class': 'mb-3 px-lg-4'}})}}
+				</div>
 				{% if not trick %}
 					{{ form_row(formView.category, {'attr': {'data-type':'trick'},'row_attr':{'class': 'mb-3 px-4'}})}}
 				{% endif %}
@@ -243,7 +245,7 @@
 
 			</div>
 
-			<button type="submit" class="submit btn btn-primary text-uppercase  me-3 ms-auto mb-3">
+			<button type="submit" class="submit btn btn-primary text-uppercase  me-3 ms-auto m-3">
 				<i class="fas fa-save"></i>
 				Soumettre !
 			</button>
