--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
 	<div class="container-xxl">
-		<a href="#" class="navbar-brand fs-4">Snowtricks</a>
+		<a href="#" class="navbar-brand h1">Snowtricks</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
