--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -15,7 +15,7 @@
 						<a class="nav-link" href="#">Les Tricks</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Se Connecter</a>
+						<a class="nav-link" href="{{path('app_login')}}">Se Connecter</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Déconnect'</a>
