--- a/templates/contribution/edit_trick.html.twig
+++ b/templates/contribution/edit_trick.html.twig
@@ -5,15 +5,15 @@
 {% endblock %}
 
 {% block body %}
+	<div class="container-xxl">
+		<h1 class="h1 text-center py-2 my-1">Contribuer -
+			{% if trick %}
+				Editer le Trick
+			{% else %}
+				Créer un Trick
+			{% endif %}
+		</h1>
 
-	<h1 class="h5 text-center py-2 my-1">Contribuer -
-		{% if trick %}
-			Editer le Trick
-		{% else %}
-			Créer un Trick
-		{% endif %}
-	</h1>
-
-	{% include "contribution/_form.html.twig" %}
-
+		{% include "contribution/_form.html.twig" %}
+	</div>
 {% endblock %}
