--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,18 +4,19 @@
 {% endblock %}
 
 {% block body %}
-<div class="page-login">
-	<h1 class="h1 mb-3 font-weight-normal">Créer un compte</h1>
-	{% for flashError in app.flashes('verify_email_error') %}
-		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
-	{% endfor %}
-	<div class="card-login card mb-4 px-3 py-4">
+<div class="container-xxl">
+	<div class="page-login">
+		<h1 class="h1 mb-3 font-weight-normal">Créer un compte</h1>
+		{% for flashError in app.flashes('verify_email_error') %}
+			<div class="alert alert-danger" role="alert">{{ flashError }}</div>
+		{% endfor %}
+		<div class="card-login card mb-4 px-3 py-4">
 
-		{{ form_start(registrationForm) }}
-		{{ form_row(registrationForm.pseudo) }}
-		{{ form_row(registrationForm.email) }}
-		{{ form_row(registrationForm.plainPassword) }}
-		{{ form_row(registrationForm.agreeTerms, {
+			{{ form_start(registrationForm) }}
+			{{ form_row(registrationForm.pseudo) }}
+			{{ form_row(registrationForm.email) }}
+			{{ form_row(registrationForm.plainPassword) }}
+			{{ form_row(registrationForm.agreeTerms, {
             label: 'J\'accepte les conditions générales',label_attr: {class: 'fw-light fst-italic'}
         }) }}
 
@@ -23,5 +24,6 @@
 				<i class="bi bi-check-square me-1"></i>Enregistrer</button>
 			{{ form_end(registrationForm) }}
 		</div>
+	</div>
 	</div>
 {% endblock %}
