--- a/templates/shared/_alert.html.twig
+++ b/templates/shared/_alert.html.twig
@@ -1,4 +1,8 @@
-{% for message in app.flashes('success') %}
-	<div class="alert alert-success mx-auto"><i class="bi bi-check-lg"> </i>{{ message }}
-	</div>
-{% endfor %}
+<div class="container-xxl">
+	{% for message in app.flashes('success') %}
+		<div class="alert alert-success mx-auto">
+			<i class="bi bi-check-lg"></i>
+			{{ message }}
+		</div>
+	{% endfor %}
+</div>
