--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,3 +1,17 @@
+{# {% if app.user %}
+	{% set contributions = 0 %}
+	{% for trick in app.user.tricks %}
+		{% for contribution in trick.contributions %}
+			{% set contributions = contributions + 1 %}
+		{% endfor %}
+	{% endfor %}
+
+	<pre>
+	{{ dump(app.user.trick) }}
+</pre>
+{% endif %} #}
+
+
 <nav class="navbar navbar-expand-md navbar-light">
 	<div class="container-xxl">
 		<a href="{{path('homepage')}}" class="navbar-brand h1">Snowtricks</a>
@@ -11,9 +25,22 @@
 					<li class="nav-item">
 						<a class="nav-link" href="{{path('homepage')}}">Accueil</a>
 					</li>
+					{% if app.user and is_granted('ROLE_AUTHOR') %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{path('user_admin_panel')}}">
+								<i class="bi bi-clipboard-check me-1"></i>Admin'
+								{# <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+									{{ contributions }}
+									<span class="visually-hidden">
+										contributions en attente de validation</span>
+								</span> #}
+							</a>
+						</li>
+					{% endif %}
 					{% if app.user %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{path('contribution_edit_trick')}}"><i class="bi bi-plus-circle-fill me-1"></i>Nouveau Trick</a>
+							<a class="nav-link" href="{{path('contribution_new')}}">
+								<i class="bi bi-plus-circle me-1"></i>Nouveau Trick</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{path('app_logout')}}">Déconnect'</a>
