--- a/templates/contribution/_form.html.twig
+++ b/templates/contribution/_form.html.twig
@@ -2,7 +2,7 @@
 {% macro printImageRow(imageForm) %}
 	<div class="modal fade" id="img___name___Modal" tabindex="-1" aria-labelledby="imgModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
-			<div class="modal-content">
+			<div class="modal-content modal-500">
 				<div class="modal-header">
 					<h5 class="modal-title" id="imgModalLabel">Ajout d'une image</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -36,7 +36,7 @@
 
 		<div class="modal fade" id="img_{{index}}_Modal" tabindex="-1" aria-labelledby="imgModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
-				<div class="modal-content">
+				<div class="modal-content modal-500">
 					<div class="modal-header">
 						<h5 class="modal-title" id="imgModalLabel">Ajout d'une image</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -71,7 +71,7 @@
 	{% macro printVideoRow(videoForm) %}
 		<div class="modal fade" id="video___name___Modal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
-				<div class="modal-content">
+				<div class="modal-content modal-500">
 					<div class="modal-header">
 						<h5 class="modal-title" id="videoModalLabel">Ajout d'une video</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -94,7 +94,7 @@
 			{% if videoForm.videoTarget.vars.data is null %}
 				<div class="card-img-top" style="background: {{videoForm.vars.valid is same as(false) ? " url(&quot;data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23da292e'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23da292e' stroke='none'/%3e%3c/svg%3e&quot;) no-repeat right 0/15%, " : ''}} url('/src/img/no_video.svg') no-repeat center/50% #f8fafb; height: 30vh; border-radius: 10px 10px 0 0"></div>
 			{% else %}
-				<iframe class="card-img-top" src="{{videoForm.vars.data.link}}" title="Video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe class="card-img-top rounded-0" src="{{videoForm.vars.data.link}}" title="Video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			{% endif %}
 			<div class="card-body text-end">
 				<button type="button" class="btn btn-primary bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#video_{{index}}_Modal"></button>
@@ -104,7 +104,7 @@
 
 		<div class="modal fade" id="video_{{index}}_Modal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered">
-				<div class="modal-content">
+				<div class="modal-content modal-500">
 					<div class="modal-header">
 						<h5 class="modal-title" id="videoModalLabel">Ajout d'une image</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -146,12 +146,12 @@
 
 		<div class="row">
 			<div class="col">
-				<div class="card-trick_in-front">
+				<div class="card-link_top_end">
 					<button type="button" class="btn btn-primary bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#img_in_front_Modal"></button>
 					{# ---------- Modal ------------ #}
 					<div class="modal fade" id="img_in_front_Modal" tabindex="-1" aria-labelledby="image in front - modal" aria-hidden="true">
 						<div class="modal-dialog modal-dialog-centered">
-							<div class="modal-content">
+							<div class="modal-content modal-500">
 								<div class="modal-header">
 									<h5 class="modal-title" id="videoModalLabel">Image mise en avant</h5>
 									<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
